implemented linkedList, stack and expression evaluation

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "vitest": "^4.0.18"
   }
 }
